[package]
name = "tree-sitter-cooklang"
description = "Cooklang grammar for tree-sitter"
version = "0.0.1"
keywords = ["incremental", "parsing", "cooklang"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/addcninblue/tree-sitter-cooklang"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
